// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.malfunction.acceptance given: [case1] malfunction then pass unblocks hook when: [t0] route.drive hook mode with only malfunction in passage then: stdout matches snapshot 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.feature
   │
   └─ 💥 halted, guard malfunction
      └─ please tell a human this needs to be fixed before you can continue
"
`;

exports[`driver.route.malfunction.acceptance given: [case1] malfunction then pass unblocks hook when: [t1] passed status is appended after malfunction then: stdout matches snapshot 1`] = `""`;

exports[`driver.route.malfunction.acceptance given: [case2] reviewer malfunction not cached when: [t0] reviewer malfunctions (exit 1) then: the malfunction tree is pinned — the reviewer is marked malfunction and the stone is blocked 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ malfunction 💥
   │   ├─ terminal — does not block higher levels
   │   ├─ given: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
   │   └─ taken: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   ├─ options
   │  ├─ overrule the malfunction — a human must grant
   │  │  └─ rhx route.stone.set --stone 1.feature --as overruled
   │  └─ or fix the reviewer, then retry
   └─ guard
      ├─ artifacts
      │   └─ $route/1.feature*.md
      ├─ reviews
      │   └─ r1: bash (l1, 0/∞)
      │       ├─ malfunction 💥
      │       ├─ terminal — does not block higher levels
      │       ├─ given: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
      │       └─ taken: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.malfunction.acceptance given: [case2] reviewer malfunction not cached when: [t1] reviewer is fixed and re-run then: ⛔ the guard summary still says malfunction 💥 while the round says approved — a DEFECT, snapped as-is 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
   │   └─ taken: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ malfunction 💥
   │  │       ├─ terminal — does not block higher levels
   │  │       ├─ given: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
   │  │       └─ taken: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.malfunction.acceptance given: [case3] reviewer constraint not cached when: [t0] reviewer finds constraints (exit 2) then: the constraint tree is pinned — the reviewer is marked constraint and the stone is blocked 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ constraint ✋
   │   ├─ terminal — does not block higher levels
   │   ├─ given: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
   │   └─ taken: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = blocked
   ├─ reason = reviewer constraint
   ├─ options
   │  ├─ overrule the constraint — a human must grant
   │  │  └─ rhx route.stone.set --stone 1.feature --as overruled
   │  └─ or fix the reviewer, then retry
   └─ guard
      ├─ artifacts
      │   └─ $route/1.feature*.md
      ├─ reviews
      │   └─ r1: bash (l1, 0/∞)
      │       ├─ constraint ✋
      │       ├─ terminal — does not block higher levels
      │       ├─ given: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
      │       └─ taken: .reviews/peer/1.feature._.review.i001.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.malfunction.acceptance given: [case3] reviewer constraint not cached when: [t1] artifact fixed and re-run then: ⛔ the guard summary still says constraint ✋ while the round says approved — a DEFECT, snapped as-is 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
   │   └─ taken: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ constraint ✋
   │  │       ├─ terminal — does not block higher levels
   │  │       ├─ given: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.given.by_peer.bash.md
   │  │       └─ taken: .reviews/peer/1.feature._.review.i002.d6ef1aa3fad755e23c.r001._.taken.by_self.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
